fix: Case Card attribute drag preview lags behind mouse (CODAP-777) (#2181)
[CODAP-777](https://concord-consortium.atlassian.net/browse/CODAP-777)

--- a/v3/src/components/case-card/case-card.scss
+++ b/v3/src/components/case-card/case-card.scss
@@ -12,9 +12,11 @@
   position: relative;
 
   .attribute-drag-overlay {
-    display: inline-flex;
+    display: block;
+    margin: auto;
     padding: 0 5px;
-    width: auto;
+    transform: translateX(-50%); // centers drag preview on mouse pointer
+    width: fit-content;
   }
 
   .codap-attribute-header-divider {
